--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script
+  defer
+  data-website-id="68624661f06d5a2fe298c487"
+  data-domain="nft-marketplace-81f39.web.app"
+  src="https://datafa.st/js/script.js">
+</script>
     <meta charset="utf-8" />
     <link rel="icon" href="IMG_7027.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
